[build-system]

requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gangneung-its"
version = "0.1.0"
description = "강릉 ITS API를 파이썬에서 쉽게 사용할 수 있게 해 주는 라이브러리입니다.\nimport gits로 사용하세요."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "이우진", email = "hihiohak@gmail.com" } ]
requires-python = ">=3.8"
dependencies = [ "requests", "tenacity" ]

[project.urls]
Homepage = 